popup(css-fix): status bar background in dark mode

--- a/feat-popup/index.css
+++ b/feat-popup/index.css
@@ -109,7 +109,8 @@ body {
 }
 
 @media screen and (prefers-color-scheme: dark) {
-    html {
+    html,
+    #status-bar {
         background-color: #202124;
     }
 
